{
    "name": "InputActions",
    "maps": [
        {
            "name": "MainMap",
            "id": "430f07af-6980-41f2-948b-c4bcf35c036d",
            "actions": [
                {
                    "name": "PreviousAndNext",
                    "type": "Button",
                    "id": "1b418f40-b2b0-4945-ab7e-39b9d0b98077",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "86b68bb8-ffc5-4469-b33d-5cbef13180c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPos",
                    "type": "Value",
                    "id": "29b0a740-4788-4fa4-9ceb-c2d0be893d27",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mouse",
                    "type": "Button",
                    "id": "05103f8c-bbce-4ff8-9fc1-b2fb6f92a12d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "5c2fbc59-b1f9-449f-960a-bac6acb0e4ac",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousAndNext",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a0486ed5-3fa2-4014-b01c-f746f43a45f1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControlScheme",
                    "action": "PreviousAndNext",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0abd107d-7c30-428e-89ad-0873650aa8c9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControlScheme",
                    "action": "PreviousAndNext",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftRight",
                    "id": "5ee36490-1807-456a-bd8b-2d1f312579dc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousAndNext",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "06311d33-680c-425f-8542-2d9b0060d90a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControlScheme",
                    "action": "PreviousAndNext",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "91070eb9-1a65-43f1-b46a-9831856879d6",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "MainControlScheme",
                    "action": "PreviousAndNext",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d941f804-4cef-49ab-bc34-752b0a3f0592",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "516b2613-fc44-4826-8933-40335b18f43c",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca0a1eec-b051-4a31-9db8-ce076b8865fb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MainControlScheme",
            "bindingGroup": "MainControlScheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}